--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:process1]
-command= cd backend & npm ci & npm start 
+command= cd backend && npm ci && npm start 
 
 [program:process2]
-command=cd frontend & npm ci & node index.js
+command=cd frontend && npm ci && npm start
