--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,9 @@
 nodaemon=true
 
 [program:process1]
-command= cd backend && npm ci && npm start 
+command= npm ci /usr/bin/backend
+command= npm start /usr/bin/backend
 
 [program:process2]
-command=cd frontend && npm ci && npm start
+command= npm ci /usr/bin/frontend
+command= npm start /usr/bin/frontend
