--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,9 +2,9 @@
 nodaemon=true
 
 [program:process1]
-command= npm ci /usr/bin/backend
-command= npm start /usr/bin/backend
+command= npm ci /usr/bin/backend/config.js
+command= npm start /usr/bin/backend/config.js
 
 [program:process2]
-command= npm ci /usr/bin/frontend
-command= npm start /usr/bin/frontend
+command= npm ci /usr/bin/frontend/src/App.js
+command= npm start /usr/bin/frontend/src/App.js
